Fix issue #570 with too much CSS margin in InputfieldPageAutocomplete

--- a/wire/modules/Inputfield/InputfieldPageAutocomplete/InputfieldPageAutocomplete.css
+++ b/wire/modules/Inputfield/InputfieldPageAutocomplete/InputfieldPageAutocomplete.css
@@ -1,5 +1,5 @@
 
-.InputfieldPageAutocomplete ol {
+.content .InputfieldPageAutocomplete ol {
 	margin: 0; 
 	list-style: none;
 }
